Refactor user serializer and add unconfirmed_matches view
