# custom_auth/serializers.py
@@ -3,35 +3,27 @@ from .models import User
 from django.contrib.auth.password_validation import validate_password
 
 class UserSerializer(serializers.ModelSerializer):
-
-    class Meta:
-        model = User
-        fields = ('id', 'username', 'first_name', 'last_name', 'paternal_name', 'email', 'elo')
-        read_only_fields = ('elo', 'id')
-
-
-class RegisterUserSerializer(serializers.ModelSerializer):
-    password1 = serializers.CharField(write_only=True, required=True, validators=(validate_password,))
-    password2 = serializers.CharField(write_only=True, required=True)
-
-    def validate(self, attrs):
-        if attrs['password1'] != attrs['password2']:
-            raise serializers.ValidationError({"password1": "Password fields didn't match."})
-        return super().validate(attrs)
+    password = serializers.CharField(write_only=True, validators=(validate_password,))
 
     def create(self, validated_data):
-        password = validated_data['password1']
-        del validated_data['password1']
-        del validated_data['password2']
+        password = validated_data.pop('password')
         user = super().create(validated_data)
         user.set_password(password)
         user.save()
         return user
 
+    def update(self, user, validated_data):
+        password = validated_data.get('password')
+        if password:
+            del validated_data['password']
+            user.set_password(password)
+        return super().update(user, validated_data)
+
     class Meta:
         model = User
-        fields = ('id', 'username', 'first_name', 'last_name', 'paternal_name', 'email', 'elo', 'password1', 'password2')
+        fields = ('id', 'username', 'first_name', 'last_name', 'paternal_name', 'email', 'elo', 'password')
         read_only_fields = ('elo', 'id')
+        write_only_fields = ('password',)
 
 
 class UsernameValidationSerializer(serializers.Serializer):
